--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "lodash": "^4.17.11",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.20",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.6"
   }
 }
